--- a/src/Components/HeroText/HeroText.css
+++ b/src/Components/HeroText/HeroText.css
@@ -1,3 +1,5 @@
-.hero-text{ position: absolute; top: 20%; right: 90px; display: flex; flex-direction: column; align-items: end; max-width: 470px; text-align: right; font-size: 14px; }
+.hero-text{ position: absolute; top: 20%; right: 90px; display: flex; flex-direction: column; align-items: end; max-width: 470px; text-align: right; font-size: 14px; z-index: 2; }
 .hero-text img{ max-width: 330px; }
-.hero-text p{ padding-bottom: 20px; font-weight: 200; font-size: 16px; }
+.hero-text p,
+.hero-text h3{  font-size: 11px; text-transform: uppercase; font-weight: 300; letter-spacing: 5.2px; line-height: 2.4; }
+.hero-text h3{ font-size: 12px; padding-bottom: 0; font-weight: 700; text-decoration: underline; padding-top: 30px; }
