--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -1,10 +1,21 @@
-.cardItem { border: solid 1px transparent; padding: 20px; transition: all .3s;  }
-.cardItem:hover { border: solid 1px #000; }
-.cardItem figure { height: 395px; width: 100%; margin-bottom: 14px; }
-.cardItem figure img { width: 100%; height: 100%; object-fit: contain;  }
-.cardItem h3 { font-size: 20px; font-weight: 600; padding-bottom: 14px; }
-.cardItem .textWrapper { display: flex; flex-direction: column; }
-.cardItem .textWrapper p { font-weight: 600; }
-.cardItem .textWrapper p span { font-weight: normal; padding-left: 4px; }
+.cardItem { border: solid 3px transparent; padding: 20px; transition: all .3s;  }
+.cardItem:hover { border: solid 3px #000; }
+.cardItem figure { height: 605px; width: 100%; margin-bottom: 14px; overflow: hidden; position: relative; }
+.cardItem figure img { width: 100%; height: 100%; object-fit: cover; object-position: center; position: absolute; top: 0; transform: scale(1); transition: transform .3s, object-position 2s; }
+.cardItem:hover figure img { object-position: top; transform: scale(1.5); }
+.cardItem h3 { font-size: 24px; font-weight: 600; padding: 9px 0; text-transform: uppercase; }
+.cardItem .textWrapper { display: flex; flex-direction: column; color: #000; }
+.cardItem .textWrapper li{ margin-bottom: 5px; }
+.cardItem .textWrapper p { font-weight: normal; letter-spacing: 1px; }
+.cardItem .textWrapper p span {  padding-left: 4px; font-weight: 600; }
 .cardItem .textWrapper p.action { color: red; text-transform: uppercase; font-weight: 600; transition: all .3s; position: absolute; bottom: 20px;  right: 20px; }
 .cardItem .textWrapper p.action:hover { color: red; }
+
+.cardItemFooter{ display: flex; margin-top: 5px; align-items: end; }
+
+.tag { background: #000; font-size: 12px; color: #FFF; text-transform: uppercase; padding: 3px 7px; letter-spacing: 1.5px; }
+.price{ color: #000; font-size: 35px; margin-left: auto; line-height: 1; }
+
+
+
+
