--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -1,6 +1,7 @@
-.hero{ position: relative; height: 100vh; }
+.hero{ position: relative; height: 100vh; background: #000; color: #fff; }
 .hero .wrapper{ height: 100%; }
-.hero .video-container{ max-height: 80%; overflow: hidden; position: absolute; top: 60px; width: 100%; z-index: -1; }
-.hero .video-container .video-hero{ width: 100%; opacity: .5; margin-top: -4%; }
-.hero .hero-logo{ max-width: 64%; position: absolute; bottom: 0; }
+.hero .video-container{ max-height: 65%; overflow: hidden; position: absolute; top: 141px; width: 110%; left: -15%; }
+.hero .video-container .video-hero{ width: 100%; opacity: 0.4; margin-top: -6%; }
+.hero .hero-logo{ max-width: 50%; position: absolute; bottom: 7%; z-index: 2; }
 
+.home-section{ background: #000; color: #fff; }
