--- a/src/assets/styles/generics.css
+++ b/src/assets/styles/generics.css
@@ -1,7 +1,7 @@
 body { 
     font-family: 'Poppins', sans-serif;
-    color: #FFF; 
-    background: #000;
+    background: #FFF; 
+    color: #000;
     font-size: 16px; 
     line-height: 1.5; 
 }
