--- a/src/Components/ItemDetail/ItemDetail.css
+++ b/src/Components/ItemDetail/ItemDetail.css
@@ -1,19 +1,57 @@
+.itemDetail { margin-top: 120px; }
 .itemDetail .wrapper{ display: flex; align-items: center; }
 .itemDetail figure{ width: 500px; margin-right: 20px; }
-.itemDetail figure img{  }
-.itemDetail figure{ max-width: 500px; margin-right: 20px; }
+.itemDetail figure img{ width: 100%; }
+.itemDetail figure{ max-width: 500px; margin-right: 100px; }
 .itemDetail .textWrapper{ max-width: 500px; }
-.itemDetail .textWrapper h3{ font-size: 35px; font-weight: 600; }
+.itemDetail .textWrapper h3{ font-size: 35px; font-weight: 600; letter-spacing: 5.2px; text-transform: uppercase; }
+.itemDetail .textWrapper ul{ margin-bottom: 60px; }
+.itemDetail .textWrapper ul li{letter-spacing: 1px; margin-bottom: 8px; }
+.itemDetail .textWrapper ul li p.description{ font-style: italic; font-size: 13px; padding-bottom: 20px; }
+.itemDetail .textWrapper ul li p span{ text-transform: uppercase; font-weight: 600; }
+
+.itemDetail .textWrapper .cardItemFooter{}
+
+.itemDetail .textWrapper .buy-container{ display: flex; width: 100%; margin-top: 40px; }
+.counter-container{ display: flex; flex-wrap: wrap; border: 1px #000 solid; width: 50%; }
+.counter-container .less,
+.counter-container .more{ cursor: pointer; transition: all 0.3s; width: 50%; border: 1px #000 solid; text-align: center; font-size: 22px; line-height: 1.3; font-weight: 600; height: 32px; }
+.counter-container .less:hover,
+.counter-container .more:hover{ background: #000; color: #fff; }
+.counter-container .quantity{ font-size: 14px; width: 100%; border: 1px #000 solid; text-transform: uppercase; font-weight: 600; display: flex; justify-content: space-between; padding: 0 20px; height: 32px; align-items: center; }
+.itemDetail .textWrapper .buy-container .btn{ transition: all .3s; cursor: pointer; width: 50%; text-transform: uppercase; background: #000; color: #fff; font-weight: 600; font-size: 14px; letter-spacing: 5px; text-align: center; }
+.itemDetail .textWrapper .buy-container .btn:hover{font-size: 17px;}
 
 
+        /*loadar*/
+        .loader-wrapper{ width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; }
+        .loader{ width: 80px; height: 80px; position: relative; border-radius: 50%; overflow: hidden; }
+        .loader svg.border{ width: 100%; position: absolute; top: 0; }
+        .waves-container{ position: absolute; transform: translateY(0px); animation: waves 6s linear infinite; }
+        .waves-container::after{ content: ""; display: block; background: #116e53; width: 100%; height: 80px; position: absolute; bottom: -38px; }
+        .waves { position: relative; width: 100%; height: 15vh; margin-bottom: -7px; min-height: 100px; max-height: 150px; }
+        .parallax>use { animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite; }
+        .parallax>use:nth-child(1) { animation-delay: -2s; animation-duration: 2s; }
 
+        @keyframes move-forever {
+            0% {
+                transform: translate3d(-90px, 0, 0);
+            }
 
+            100% {
+                transform: translate3d(85px, 0, 0);
+            }
+        }
 
+        @keyframes waves {
+            0% {
+                transform: translateY(10px);
+            }
 
-
-
-
-
+            100% {
+                transform: translateY(-80px);
+            }
+        }
 
 
 
