--- a/src/Containers/header/Header.css
+++ b/src/Containers/header/Header.css
@@ -1,5 +1,5 @@
 /*Header*/
-header{ display: flex; background-color: black; color: #FFF; z-index: 9999; width: 100%; position: fixed; height: 60px; align-items: center; }
+header{ display: flex; top: 0; background-color: black; color: #FFF; z-index: 9999; width: 100%; position: fixed; height: 60px; align-items: center; }
 header .wrapper{ display: flex; justify-content: end; align-items: center; padding: 0 30px; }
 header .logo{ font-family: 'Righteous', sans-serif;  margin-right: auto; font-size: 36px; color: #FFF; overflow: hidden; max-width: 22px; transition: all .5s; }
 header .logo:hover{ max-width: 354px; }
